# python_env

./: README.md  Untitled.ipynb  context_manager.py  main.py  pyproject.toml  test.txt  utils.py
docs/: benchmark_venv.md  conda_poetry.md  frustrations.md  pyenv_poetry.md
libs/: utils.c
old_pyenv_poetry/: pyproject.toml
python_env/: main.py
tests/python_env/: test_main.py
