[tool.poetry]
name = "python_env"
version = "0.1.0"
description = ""
authors = ["thomas.marquis.dev"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
click = "^7.0"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
